--- a/src/components/MenuBtn.astro
+++ b/src/components/MenuBtn.astro
@@ -11,7 +11,7 @@ import TextAnim from "./TextAnim.astro"
     type="button"
     class={`
     size-9 flex flex-col gap-y-1.5 justify-center p-1.5
-    *:w-full *:h-[2px] *:rounded-lg *:bg-foreground
+    *:w-full *:h-[2px] *:rounded-lg *:bg-[hsl(var(--header-foreground))]
     *:translate-y-0 *:rotate-0 *:transition *:duration-[400ms]
   `}
   >
