--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ import TechSkills from "@/sections/TechSkills.section.astro"
 
           entry.target.classList.add("in-view")
 
-          if (fg) body.style.setProperty("--foreground", fg)
+          if (fg) body.style.setProperty("--header-foreground", fg)
           if (bg) body.style.setProperty("--background", bg)
           if (frame) body.style.setProperty("--frame", frame)
           if (pBg) body.style.setProperty("--p-bg", pBg)
