--- a/src/sections/Projects.section.astro
+++ b/src/sections/Projects.section.astro
@@ -4,9 +4,11 @@ import ProjectsMobile from "./ProjectsMobile.section.astro"
 ---
 
 <div
+  style="--foreground: 0 0% 0%"
   class={`
-    bg-[hsl(var(--p-bg))] text-foreground
-    border-foreground rounded-2xl
+    bg-[hsl(var(--p-bg))]
+    text-foreground border-foreground
+    rounded-2xl
     transition-colors duration-300
   `}
 >
