--- a/src/sections/ProjectsMobile.section.astro
+++ b/src/sections/ProjectsMobile.section.astro
@@ -16,7 +16,7 @@ import projects from "@/data/projects.json"
       projects.map((p) => (
         <Project
           project-item-color
-          class="pb-24 py-12 h-[calc(100vh-var(--fp)*2)]"
+          class="h-[calc(100vh-var(--fp)*2)]"
           {...(p as ProyectInterface)}
         />
       ))
