--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,7 +1,7 @@
 ---
 import { cn } from "@/lib/utils"
 
-type Hsl = `${number} ${number} ${number}`
+type Hsl = `${number} ${number}% ${number}%`
 
 interface Props {
   as: string
@@ -35,8 +35,9 @@ const animObj = {
 <As
   {...props}
   {...anim ? animObj : {}}
+  style={`--foreground: ${fg};`}
   class={cn(
-    "size-full p-4 overflow-hidden snap-center rounded-2xl",
+    "size-full p-4 overflow-hidden snap-center rounded-2xl text-foreground",
     Astro.props.class
   )}
 >
