--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,10 +3,10 @@
 @tailwind utilities;
 
 :root {
-  --background: 0 0 0;
-  --foreground: 40 100 80;
+  --background: 0 0% 0%;
+  --foreground: 0 0% 0%;
 
-  --border: 40 100 80;
+  --border: 0 0% 0%;
 
   --fp: 0.5rem;
 
