--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -26,6 +26,7 @@ const {
   data-frame="0 0% 0%"
   data-fg="0 0% 0%"
   data-p-bg={background}
+  style="--foreground: 0 0% 0%;"
   class={cn(
     "xs:transition xs:opacity-0 xs:duration-500 flex items-center justify-center mt-16",
     Astro.props.class
@@ -61,7 +62,7 @@ const {
             href={link}
             target="_blank"
             rel="noopener noreferrer"
-            class="w-full px-5 py-1 flex justify-between items-center bg-foreground hover:bg-foreground/80 rounded-full text-[hsl(var(--p-bg))]"
+            class="w-full px-5 py-1 flex justify-between items-center rounded-full bg-foreground hover:bg-foreground/80 text-background transition"
           >
             <span class="font-bold">Visit</span>
             <LucideIcon icon={ArrowUpRight} class="size-4" />
