--- a/src/sections/Projects.section.astro
+++ b/src/sections/Projects.section.astro
@@ -4,9 +4,9 @@ import ProjectsMobile from "./ProjectsMobile.section.astro"
 ---
 
 <div
-  style="--foreground: 0 0% 0%"
+  style="--background: var(--p-bg); --foreground: 0 0% 0%;"
   class={`
-    bg-[hsl(var(--p-bg))]
+    bg-background
     text-foreground border-foreground
     rounded-2xl
     transition-colors duration-300
