--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Root from "@/layouts/Root.layout.astro"
 import Experience from "@/sections/Experience.section.astro"
 import Hero from "@/sections/Hero.section.astro"
+import More from "@/sections/More.section.astro"
 import Personal from "@/sections/Personal.section.astro"
 import Projects from "@/sections/Projects.section.astro"
 import TechSkills from "@/sections/TechSkills.section.astro"
@@ -13,6 +14,7 @@ import TechSkills from "@/sections/TechSkills.section.astro"
   <TechSkills />
   <Experience />
   <Personal />
+  <More />
 </Root>
 
 <style is:global>
