--- a/src/sections/TechSkills.section.astro
+++ b/src/sections/TechSkills.section.astro
@@ -150,7 +150,9 @@ const stack = [...backend, ...frontend, ...devops]
   bg="0 0 0"
   class="xs:transition-all xs:duration-500 xs:opacity-0 uppercase flex flex-col"
 >
-  <h1 class="font-black text-5xl md:text-8xl mt-20 mb-10 md:mb-0 md:mt-32">
+  <h1
+    class="font-black text-4xl sm:text-5xl md:text-8xl mt-20 mb-10 md:mb-0 md:mt-32"
+  >
     <TextAnim trigger h="5.5rem">
       Tech<span class="text-stroke">Skills</span>
     </TextAnim>
