--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -47,7 +47,7 @@ import TextAnim from "./TextAnim.astro"
         <LucideIcon class="size-3.5" icon={ArrowRight} />
       </TextAnim>
       <TextAnim>
-        <a href="/">Home</a>
+        <a href="/#home">Home</a>
       </TextAnim>
       <TextAnim>
         <a href="/#cv">Rsm</a>
