--- a/src/sections/Hero.section.astro
+++ b/src/sections/Hero.section.astro
@@ -4,6 +4,7 @@ import TextAnim from "@/components/TextAnim.astro"
 ---
 
 <Section
+  id="home"
   anim
   frame="20 8% 0%"
   fg="51 22% 69%"
@@ -16,7 +17,7 @@ import TextAnim from "@/components/TextAnim.astro"
 >
   <div class="px-2 uppercase select-none flex items-center justify-center">
     <div
-      class="*:block absolute top-12 sm:top-20 right-4 font-black font-impact text-lg sm:text-2xl md:text-3xl"
+      class="*:block absolute top-14 sm:top-20 right-4 font-black font-impact text-base xs:text-lg sm:text-2xl md:text-3xl"
     >
       <TextAnim trigger h="3.5rem">ミ</TextAnim>
       <TextAnim trigger h="3.5rem" d="100ms">ケ</TextAnim>
