--- a/src/sections/Projects.section.astro
+++ b/src/sections/Projects.section.astro
@@ -4,6 +4,7 @@ import ProjectsMobile from "./ProjectsMobile.section.astro"
 ---
 
 <div
+  id="projects"
   style="--background: var(--p-bg); --foreground: 0 0% 0%;"
   class={`
     bg-background
