--- a/src/sections/TechSkills.section.astro
+++ b/src/sections/TechSkills.section.astro
@@ -144,6 +144,7 @@ const stack = [...backend, ...frontend, ...devops]
 ---
 
 <Section
+  id="tech-skills"
   anim
   frame="0 0 100"
   fg="0 0 100"
