--- a/src/components/KeyNav.astro
+++ b/src/components/KeyNav.astro
@@ -5,13 +5,13 @@ import LucideIcon from "./LucideIcon.astro"
 
 <div
   style="--foreground: var(--header-foreground);"
-  class="fixed bottom-4 left-0 right-0 z-20 text-foreground/60 hover:text-foreground transition-colors"
+  class="fixed bottom-[--fp] left-0 right-0 z-20 text-foreground/60 hover:text-foreground transition-colors"
 >
   <button
     id="open-ninja-keys"
     title="Cmd + K"
-    class="flex items-center justify-center text-xs md:text-sm gap-x-2 font-mono mx-auto"
-    ><LucideIcon icon={Command} class="size-3 md:size-4" /> Open Command Menu</button
+    class="flex items-center justify-center text-xs md:text-sm gap-x-2 font-mono mx-auto mb-2"
+    ><LucideIcon icon={Command} class="size-3 md:size-4" />Open Command Menu</button
   >
 </div>
 
