--- a/src/components/PageFrame.astro
+++ b/src/components/PageFrame.astro
@@ -1,7 +1,9 @@
 <div
   id="page-frame"
-  class="p-[var(--fp)] size-full fixed top-0 left-0 bg-[hsl(var(--frame))] xs:transition-all xs:duration-400"
+  class="p-[--fp] size-full fixed top-0 left-0 bg-[hsl(var(--frame))] xs:transition-all xs:duration-400"
 >
-  <div class="relative size-full rounded-2xl bg-background xs:transition-all xs:duration-400">
+  <div
+    class="relative size-full rounded-2xl bg-background xs:transition-all xs:duration-400"
+  >
   </div>
 </div>
