--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -37,8 +37,12 @@ const {
     class="flex flex-col lg:flex-row justify-center gap-y-8 md:gap-y-14 gap-x-14 xl:max-w-screen-xl px-4 sm:px-12 2xl:px-8"
   >
     <div class="flex-1">
-      <!-- shadow-[0_2px_40px_-4px] shadow-foreground/60 -->
-      <img class="rounded-lg size-full max-w-screen-sm mx-auto" {...img} />
+      <img
+        decoding="async"
+        loading="lazy"
+        class="rounded-lg size-full max-w-screen-sm mx-auto aspect-auto"
+        {...img}
+      />
     </div>
     <div class="flex flex-1 justify-between uppercase gap-x-8">
       <div class="text-center relative">
