--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import LoadingScreen from "@/components/LoadingScreen.astro"
 import Root from "@/layouts/Root.layout.astro"
 import Experience from "@/sections/Experience.section.astro"
 import Hero from "@/sections/Hero.section.astro"
@@ -9,6 +10,7 @@ import TechSkills from "@/sections/TechSkills.section.astro"
 ---
 
 <Root>
+  <LoadingScreen />
   <Hero />
   <Projects />
   <TechSkills />
