--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -169,7 +169,8 @@ const {
       e.dataset.pos = `${newPos < 0 ? 3 : newPos}`
     })
 
-    setTimeout(() => {
+    const skipTimeout = setTimeout(() => {
+      clearInterval(skipTimeout)
       isRotating = false
     }, 500)
   }
