--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,7 +21,7 @@ import TextAnim from "./TextAnim.astro"
         <TextAnim>Write me an email</TextAnim>
         <TextAnim>
           <Link href="mailto:michelangelovalderrama@gmail.com"
-            >email@gmail.com</Link
+            >michelangelovalderrama@gmail.com</Link
           >
         </TextAnim>
       </p>
