--- a/src/components/MenuBtn.astro
+++ b/src/components/MenuBtn.astro
@@ -60,7 +60,7 @@ import TextAnim from "./TextAnim.astro"
           <TextAnim trigger>Write me an email</TextAnim>
           <TextAnim trigger>
             <Link href="mailto:michelangelovalderrama@gmail.com">
-              email@gmail.com
+              michelangelovalderrama@gmail.com
             </Link>
           </TextAnim>
         </p>
@@ -79,7 +79,7 @@ import TextAnim from "./TextAnim.astro"
           </TextAnim>
         </p>
       </div>
-      <div class="flex justify-end">
+      <div>
         <p>
           <TextAnim trigger>FULL STACK DEVELOPER</TextAnim>
         </p>
